Move config into .json file

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "main": "./bin/lambda.js",
   "scripts": {
-    "build": "./build.sh",
-    "create": "./provisioning/awsCreate.sh myLambda",
-    "deploy": "./provisioning/awsUpdate.sh myLambda",
-    "invoke": "./provisioning/awsInvoke.sh myLambda",
+    "build": "./build.sh config/config.json",
+    "create": "./provisioning/awsCreate.sh config/config.json",
+    "deploy": "./provisioning/awsUpdate.sh config/config.json",
+    "invoke": "./provisioning/awsInvoke.sh config/config.json",
     "localInvoke": "node ./provisioning/localInvoke.js",
     "buildw": "babel src --out-dir bin/ -w --source-maps --sourceRoot src",
     "test": "jasmine ./bin/**/*.js",
